Added core structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World
-    </h1>
+    <header>Header</header>
+
+    <section>Image</section>
+    <section>Ethos</section>
+    <section>Meeting</section>
+
+    <footer>social media</footer>
 </body>
 </html>
