--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
         </nav>
     </header>
 
-    <section>Image</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
+
+    </section>
     <section>Ethos</section>
     <section>Meeting</section>
 
