--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         </div>
 
     </section>
-    <section>Ethos</section>
+    <section id="club-ethos">
+        <h1>Why love running with us?" </h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
+    </section>
     <section>Meeting</section>
 
     <footer>social media</footer>
