--- a/index.html
+++ b/index.html
@@ -108,7 +108,32 @@
         </div>
     </section>
 
-    <footer>social media</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="http://www.facebook.com" target="_blank" rel="noopener" aria-label="Visits our facebook page(opens in new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="http://www.twitter.com" target="_blank" rel="noopener" aria-label="Visits our twitter page(opens in new tab)">
+                    <i class="fa-brands fa-twitter"></i></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="http://www.youtube.com" target="_blank" rel="noopener" aria-label="Visits our youtube page(opens in new tab)">
+                    <i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="http://www.instagram.com" target="_blank" rel="noopener" aria-label="Visits our instagram page(opens in new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
     <!--font awesome script-->
     <script src="https://kit.fontawesome.com/9f816534b6.js" crossorigin="anonymous"></script>
 </body>
