--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,16 @@
         </nav>
     </header>
 
- 
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athletes running together">
+        <img src="assets/images/girls.jpg" alt="Three girls at charity paint run">
+        <img src="assets/images/runner3.jpg" alt="Solo male runner jogging on the beach">
+        <img src="assets/images/man.jpg" alt="Man at charity paint run">
+        <img src="assets/images/runner1.jpg" alt="Solo female runner jogging through Phoenix park">
+        <img src="assets/images/runner2.jpg" alt="Runners competing in marathon">
+        <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.jpg" alt="Two girls taking selfie after mud-run">
+    </section>
 
     <footer>
         <ul class="social-networks">
