--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2 id="welcome">Why love running with us?" </h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feeling Healthy <i class="fa-solid fa-heart-pulse"></i></h2>
+                <h2>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h2>
                 <hr>
                 <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.</p>
             </div>
