--- a/gallery.html
+++ b/gallery.html
@@ -37,8 +37,10 @@
         <img src="assets/images/man.jpg" alt="Man at charity paint run">
         <img src="assets/images/runner1.jpg" alt="Solo female runner jogging through Phoenix park">
         <img src="assets/images/runner2.jpg" alt="Runners competing in marathon">
+        <img src="assets/images/runner4.jpg" alt="Solo female runner jogging by the sea">
         <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
         <img src="assets/images/mud-run.jpg" alt="Two girls taking selfie after mud-run">
+        
     </section>
 
     <footer>
